# phomo

./: .gitignore  CMakeLists.txt  LICENSE.md  NOTICE.md  README.md  environment.yml  phomo.i  render.py  run.py
cmake/: HandleBoost.cmake  HandleEigen.cmake  uninstall.cmake
configs/: ceres_lunar_lambert.yaml  ceres_mcewen.yaml  vesta_lunar_lambert.yaml  vesta_mcewen.yaml
cpp/: LunarLambert_AffinePoly3Factor2.h  LunarLambert_AffinePoly4Factor2.h  McEwenFactor2.h  SunSensorFactor.h  Unit3Point3SmoothnessFactor.h
python/: CMakeLists.txt  io.py  reflectance.py  runner.py  viz.py
scripts/: download_example_data.py
tests/: CMakeLists.txt  testLunarLambert_AffinePoly3Factor2.cpp  testLunarLambert_AffinePoly4Factor2.cpp  testMcEwenFactor2.cpp  testSunSensorFactor.cpp  testUnit3Point3SmoothnessFactor.cpp
wrapper/: pybind_wrapper.tpl.example  setup.py.in
